Raberstyle.css
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

nav{
	background-color: rgba(0, 0, 0, 1);
	padding: 14px 14px 14px 0;
}

ul{
	margin: 0;
}

li {
	display: inline;
	padding: 14px;
}

nav li:hover{ 
	background-color: goldenrod;
}

li a {
	text-align: center;
	padding: 14px;
	text-decoration: none;
	color: white;
}

h1 {
	text-align: center;
	margin: 14px;
	font-size: 32px;
	font-family: "Noto Serif Hong Kong";
	color: white;
}

h2, h3, h4 {
	text-align: center;
	color: white;
}

#nav-links{
	position: relative;
	top: 20px;
}

#social-media{
	margin: 0 0 0 0px;
	display: inline-block;
}

.logo-image{
	position: absolute;
	top: 25px;
	right: 25px;
	width: 75px;
	height: 75px;
	border-radius: 50%;
	overflow: hidden;
	margin-top: -6px;
}

.resize {
	width: 75px;
	height: auto;
}

@media only screen and (max-width: 600px) {
	#social-media {
		display: none;
	}


	#nav-links li{
		padding: 3px;
		text-align: center;
	}

	.logo-image{
		top: 30px;
		right: 15px;
		width: 50px;
		height: 50px;
		border-radius: 50%;
	}

	.resize{
		width: 50px;
		height: auto;
	}
}

.nav-row{
	position: relative;
}


#social-media li:hover{
	background-color: black;
}

.fa{
	padding: 15px;
	font-size: 20px;
	width: 52px;
	height: 50px;
	text-align: center;
	text-decoration: none;
	margin: 5px 2px;
	border-radius: 50%;
}


.fa:hover{
	opacity: 0.7;
}

.facebook{
	background: #3B5998;
	color: white;
}

.linkedin{
	background: #dd4b39;
	color: white;
}

.twitter{
	background: #55ACEE;
	color: white;
}

.youtube{
	background: #bb0000;
	color: white;
}


main {
	margin: 0;
	width: 100%;
	height: 600px;
}

.main {
	width: 100%;
	height: 100%;
	background-image: url("images/street.jpeg");
	animation: scrolling-background 24s ease-out 2s infinite;
	background-size: cover;
	background-position: center center;

}

@keyframes scrolling-background{
	0%{
		background-image: url("images/detail_soho_building.jpg");
		background-size: 1536px 1024px;

	}
	8.33%{
		background-image: url("images/new_york_city_skyline-b_19.jpg");
		background-size: 1536px 1024px;
	}
	25%{
		background-image: url("images/new_york_city_skyline-b_19.jpg");
		background-size: 1536px 1024px;

	}
	33.33%{
		background-image: url("images/nyc_urban_city_manhattan.jpg");
		background-size: 1536px 1024px;
	}
	50%{
		background-image: url("images/nyc_urban_city_manhattan.jpg");
		background-size: 1536px 1024px;
	}
	58.33%{
		background-image: url("images/nyc_new_york_city_2.jpg");
		background-size: 1536px 1024px;
	}
	75%{
		background-image: url("images/nyc_new_york_city_2.jpg");
		background-size: 1536px 1024px;
	}
	83.33%{
		background-image: url("images/detail_soho_building.jpg");
		background-size: 1536px 1024px;
	}
	100%{
		background-image: url("images/detail_soho_building.jpg");
		background-size: 1536px 1024px;
	}
}


.main h2{
	position: absolute;
	top: 50%;
	width: 100%;
	background-color: rgba(0, 0, 0, 0.75);
	color: white;
	padding: 20px;
}

.main-button{
	position: absolute;
	top: 75%;
	left: 50%;
	transform: translate(-50%, -50%);
	border: none;
	color: white;
	background-color: #008CBA;
	padding: 15px 35px;
	text-align: center;
	display: inline-block;
	font-size: 18px;
	transition-duration: 0.4s;
	cursor: pointer;
}

.main-button:hover{
	background-color: darkblue;
}

footer {
	text-align: center;
	padding: 3px;
	background-color: black;
}

footer h3{
	color: white;
	padding: 5px 5px 10px 5px;
}

footer h4{
	padding: 5px;
}

footer li{
	display: block;
}

aside{
	position: float;
	display: block;
}

aside li{
	color: white;
	background-color: black;
}

p {
	color: white;
	padding: 5px;
}

